--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-tab-group>
   <mat-tab label="Home"> <app-home></app-home> </mat-tab>
+  <mat-tab label="No Pipe"><app-no-pipe></app-no-pipe> </mat-tab>
   <mat-tab label="Pure Pipe"> <app-pure-pipe></app-pure-pipe> </mat-tab>
   <mat-tab label="Impure Pipe"> <app-impure-pipe></app-impure-pipe> </mat-tab>
 </mat-tab-group>
