Changed to power function

--- a/src/app/no-pipe/no-pipe.component.html
+++ b/src/app/no-pipe/no-pipe.component.html
@@ -1,5 +1,5 @@
 <h1>
-  Counter: {{ counter }} <br />
-  Add 100: {{ addOneHundred(counter) }} <br />
+  <p>Counter: {{ counter }} </p>
+  <p>Cube: {{ power(counter, 3) }} </p>
   <button (click)="increaseCounter()">Increase Counter</button>
 </h1>
